--- a/promo-timeline-app/src/5+1L.html
+++ b/promo-timeline-app/src/5+1L.html
@@ -1,94 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>- PerfectDraft 5+1L</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="img/favicon%20small.ico" type="image/png" style="max-width: fit-content;">
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="icon"
+      href="img/favicon%20small.ico"
+      type="image/png"
+      style="max-width: fit-content"
+    />
+  </head>
 
-</head>
-
-<body>
-
+  <body>
     <div class="header">
-        <a href="CommandBoard.html">
-            <label style="font-weight:400;" class="multiselect-header">Calendar View 📅</label>
+      <a href="CommandBoard.html">
+        <label style="font-weight: 400" class="multiselect-header"
+          >Calendar View 📅</label
+        >
+      </a>
+      <div class="logo">
+        <a href="CommandBoard.html" class="href">
+          <img src="img/PerfectDraft-Logo_300dpi.png" alt="PerfectDraft Logo" />
         </a>
-        <div class="logo">
-            <a href="CommandBoard.html" class="href">
-                <img src="img/PerfectDraft-Logo_300dpi.png" alt="PerfectDraft Logo">
-            </a>
-        </div>
+      </div>
 
-        <a href="PromoTimeline.html">
-            <label style="font-weight:400;" class="multiselect-header">Timeline View ↕️</label>
-        </a>
+      <a href="PromoTimeline.html">
+        <label style="font-weight: 400" class="multiselect-header"
+          >Timeline View ↕️</label
+        >
+      </a>
     </div>
 
     <div class="slide">
-
-        <h1>5+1L Promo at Cavists</h1>
-        <table class="threePP-table ">
-            <thead class="threePP-table-header">
-                <tr>
-                    <th>KEGS</th>
-                    <th>Total HL in market</th>
-                    <th>Incremental Vol <br> <small>(est. 10%)</small></th>
-                    <th>Total cost</th>
-                    <th>Incremental Costs</th>
-                    <th>Vol. needed for <br>EBIDTA neutral</th>
-                </tr>
-            </thead>
-            <tbody>
-
-                <!-- TK -->
-
-                <tr>
-                    <td style="height: 180px;">
-                        <img class="fivelogo" src="./img/kegs front/Keg--Tripel_Karmeliet 5+1L.png" alt="TK 5+1L">
-                    </td>
-                    <td><span style="font-size: xxx-large; color: rgb(0, 0, 0);"> 948 hl</span></td>
-                    <td><span style="font-size: xxx-large; color:  rgb(6, 190, 45);"> 152 hl</span></td>
-                    <td><span style="font-size: xxx-large;">-67k€</span></td>
-                    <td><span style="font-size: xxx-large; color: rgb(0,0,0);">-</span></td>
-                    <td><span style="font-size: xxx-large; color: rgb(233, 24, 24);"> 323 hl</span></td>
-                </tr>
-
-                <!-- LEFFE -->
-
-                <tr>
-                    <td style="height: 180px;">
-                        <img class="fivelogo" src="./img/kegs front/leffe 5+1.jpg" alt="TK 5+1L">
-                    </td>
-                    <td><span style="font-size: xxx-large; color: rgb(0, 0, 0);"> 1 827 hl</span></td>
-                    <td><span style="font-size: xxx-large; color:  rgb(6, 190, 45);"> 292 hl</span></td>
-                    <td><span style="font-size: xxx-large;">-102k€</span></td>
-                    <td><span style="font-size: xxx-large; color: rgb(0,0,0);">-</span></td>
-                    <td><span style="font-size: xxx-large; color: rgb(233, 24, 24);">570 hl</span></td>
-                </tr>
-
-                <!-- STELLA ARTOIS -->
-
-                <tr>
-                    <td style="height: 180px;">
-                        <img class="fivelogo" src="./img/kegs front/Keg--Stella_Artois 5+1L.png" alt="Stella 5+1L">
-                    </td>
-                    <td><span style="font-size: xxx-large; color: rgb(0, 0, 0);"> 725 hl</span></td>
-                    <td><span style="font-size: xxx-large; color:  rgb(6, 190, 45);"> 84 hl</span></td>
-                    <td><span style="font-size: xxx-large;">-37k€</span></td>
-                    <td><span style="font-size: xxx-large; color: rgb(0,0,0);">-37k€</span></td>
-                    <td><span style="font-size: xxx-large; color: rgb(233, 24, 24);">246 hl</span></td>
-                </tr>
-            </tbody>
-        </table>
-
-
+      <h1>5+1L Promo at Cavists</h1>
+      <table class="threePP-table">
+        <thead class="threePP-table-header">
+          <tr>
+            <th>KEGS</th>
+            <th>Targeted growth %</th>
+            <th>HL uplift (not in based already)</th>
+            <th>MACO Loss</th>
+            <th>Extra volumes needed</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td style="height: 180px">
+              <img
+                class="fivelogo"
+                src="./img/kegs front/Keg--Tripel_Karmeliet 5+1L.png"
+                alt="TK 5+1L"
+              />
+            </td>
+            <td>
+              <span style="font-size: xxx-large; color: rgb(6, 190, 45)"
+                >+10%</span
+              >
+            </td>
+            <td>
+              <span style="font-size: xxx-large; color: rgb(0, 0, 0)"
+                >95 hl</span
+              >
+            </td>
+            <td>
+              <span style="font-size: xxx-large; color: rgb(0, 0, 0)">7k€</span>
+            </td>
+            <td>
+              <span style="font-size: xxx-large; color: rgb(233, 24, 24)"
+                >38 hl</span
+              >
+            </td>
+          </tr>
+          <tr>
+            <td style="height: 180px">
+              <img
+                class="fivelogo"
+                src="./img/kegs front/Keg--Stella_Artois 5+1L.png"
+                alt="Stella 5+1L"
+              />
+            </td>
+            <td>
+              <span style="font-size: xxx-large; color: rgb(6, 190, 45)"
+                >+10%</span
+              >
+            </td>
+            <td>
+              <span style="font-size: xxx-large; color: rgb(0, 0, 0)"
+                >73 hl</span
+              >
+            </td>
+            <td>
+              <span
+                style="
+                  font-size: xxx-large;
+                  color: rgb(0, 0, 0);
+                  display: block;
+                "
+                >38k€</span
+              >
+              <span
+                style="
+                  font-size: large;
+                  color: rgb(194, 155, 3);
+                  display: block;
+                "
+              >
+                (cost not in 2025 base)
+              </span>
+            </td>
+            <td>
+              <span style="font-size: xxx-large; color: rgb(233, 24, 24)"
+                >303 hl</span
+              >
+            </td>
+          </tr>
+          <tr>
+            <td style="height: 180px">
+              <img
+                class="fivelogo"
+                src="./img/kegs front/leffe 5+1.jpg"
+                alt="TK 5+1L"
+              />
+            </td>
+            <td>
+              <span style="font-size: xxx-large; color: rgb(6, 190, 45)"
+                >+10%</span
+              >
+            </td>
+            <td>
+              <span style="font-size: xxx-large; color: rgb(0, 0, 0)"
+                >183 hl</span
+              >
+            </td>
+            <td>
+              <span style="font-size: xxx-large; color: rgb(0, 0, 0)"
+                >10k€</span
+              >
+            </td>
+            <td>
+              <span style="font-size: xxx-large; color: rgb(233, 24, 24)"
+                >69 hl</span
+              >
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <script>
 
-    </script>
-
-</body>
-
+    <script type="module" src="scripts/app.js"></script>
+  </body>
 </html>
