login logout signup

--- a/promo-timeline-app/src/3PP.html
+++ b/promo-timeline-app/src/3PP.html
@@ -30,6 +30,8 @@
           >Timeline View ↕️</label
         >
       </a>
+                  <button id="logoutButton" class="black-button" style="margin-left: 10px;">Logout</button>
+
     </div>
 
     <div class="slide">
