--- a/promo-timeline-app/src/CommandBoard.html
+++ b/promo-timeline-app/src/CommandBoard.html
@@ -104,6 +104,8 @@
             >3PP View 🍺</label
           >
         </a>
+                    <button id="logoutButton" class="black-button" style="margin-left: 10px;">Logout</button>
+
       </div>
     </div>
     <div class="slide">
