--- a/promo-timeline-app/src/PromoTimeline.html
+++ b/promo-timeline-app/src/PromoTimeline.html
@@ -140,6 +140,13 @@
             >3PP View 🍺</label
           >
         </a>
+        <button
+          id="logoutButton"
+          class="black-button"
+          style="margin-left: 10px"
+        >
+          Logout
+        </button>
       </div>
     </div>
     <div class="slide">
