--- a/promo-timeline-app/src/3PP.html
+++ b/promo-timeline-app/src/3PP.html
@@ -30,8 +30,17 @@
           >Timeline View ↕️</label
         >
       </a>
-                  <button id="logoutButton" class="black-button" style="margin-left: 10px;">Logout</button>
-
+      <a
+        href="profile.html"
+        style="display: inline-block; margin-left: 10px; text-decoration: none"
+      >
+        <label style="font-weight: 400" class="multiselect-header"
+          >Profile 👤</label
+        >
+      </a>
+      <button id="logoutButton" class="black-button" style="margin-left: 10px">
+        Logout
+      </button>
     </div>
 
     <div class="slide">
