--- a/promo-timeline-app/src/PromoTimeline.html
+++ b/promo-timeline-app/src/PromoTimeline.html
@@ -140,6 +140,9 @@
             >3PP View 🍺</label
           >
         </a>
+        <a href="profile.html" style="display: inline-block;margin-left: 10px; text-decoration: none;">
+                <label style="font-weight:400;" class="multiselect-header">Profile 👤</label>
+            </a>
         <button
           id="logoutButton"
           class="black-button"
