--- a/promo-timeline-app/src/signup.html
+++ b/promo-timeline-app/src/signup.html
@@ -16,7 +16,8 @@
             <div class="login-box">
                 <h1>Sign Up</h1>
 
-                
+                <div class="login-boxes">
+                <div class="login-box1">
                 <form id="signUpForm">
                     <div class="input-group">
                         <label for="firstName">First Name</label>
@@ -42,6 +43,8 @@
                             <option value="Germany">Germany 🇩🇪</option>
                         </select>
                     </div>
+                </div>
+                    <div class="login-box2">
                     <div class="input-group">
                         <label for="email">Email</label>
                         <input type="email" id="email" name="email" required>
@@ -60,9 +63,12 @@
                             <option value="PerfectDraft">PerfectDraft</option>
                         </select>
                     </div>
+                    </div>
+                </div>
                     <button type="submit" id="submitSignUpButton">Sign Up</button>
                     <button type="button" id="goToLoginButton">Back to Login</button>
                 </form>
+            
 
                 <p id="authMessage" class="auth-message"></p>
             </div>
