big progress on promo edit

--- a/promo-timeline-app/src/PromoTimeline.html
+++ b/promo-timeline-app/src/PromoTimeline.html
@@ -145,7 +145,7 @@
             </a>
         <button
           id="logoutButton"
-          class="black-button"
+          class="logoutButton"
           style="margin-left: 10px"
         >
           Logout
