--- a/promo-timeline-app/src/signup.html
+++ b/promo-timeline-app/src/signup.html
@@ -31,16 +31,16 @@
                         <label for="country">Country</label>
                         <select id="country" name="country" required>
                             <option value="">Select Country 🌍</option>
-                            <option value="Belgium">Belgium 🇧🇪</option>
-                            <option value="Netherlands">Netherlands 🇳🇱</option>
-                            <option value="Luxembourg">Luxembourg 🇱🇺</option>
-                            <option value="France">France 🇫🇷</option>
-                            <option value="England">England 🏴󠁧󠁢󠁥󠁮󠁧󠁿</option>
-                            <option value="Northern Ireland">Northern Ireland 🇬🇧</option>
-                            <option value="Switzerland">Switzerland 🇨🇭</option>
-                            <option value="Italy">Italy 🇮🇹</option>
-                            <option value="Czech Republic">Czech Republic 🇨🇿</option>
-                            <option value="Germany">Germany 🇩🇪</option>
+                            <option value="Belgium">Belgium</option>
+                            <option value="Netherlands">Netherlands</option>
+                            <option value="Luxembourg">Luxembourg</option>
+                            <option value="France">France</option>
+                            <option value="England">England</option>
+                            <option value="Northern Ireland">Northern Ireland</option>
+                            <option value="Switzerland">Switzerland</option>
+                            <option value="Italy">Italy</option>
+                            <option value="Czech Republic">Czech Republic</option>
+                            <option value="Germany">Germany</option>
                         </select>
                     </div>
                 </div>
