--- a/promo-timeline-app/src/CommandBoard.html
+++ b/promo-timeline-app/src/CommandBoard.html
@@ -107,7 +107,7 @@
         <a href="profile.html" style="display: inline-block;margin-left: 10px; text-decoration: none;">
                 <label style="font-weight:400;" class="multiselect-header">Profile 👤</label>
             </a>
-                    <button id="logoutButton" class="black-button" style="margin-left: 10px;">Logout</button>
+                    <button id="logoutButton" class="logoutButton" style="margin-left: 10px;">Logout</button>
 
       </div>
     </div>
