good on promo creation

--- a/promo-timeline-app/src/3PP.html
+++ b/promo-timeline-app/src/3PP.html
@@ -10,24 +10,30 @@
 
 <body>
     <div class="header">
-        <a href="CommandBoard.html">
-            <label style="font-weight: 400" class="multiselect-header">Calendar View 📅</label>
-        </a>
         <div class="logo">
-            <a href="CommandBoard.html" class="href">
+            <a href="" class="href">
                 <img src="img/PerfectDraft-Logo_300dpi.png" alt="PerfectDraft Logo" />
             </a>
         </div>
 
-        <a href="PromoTimeline.html">
-            <label style="font-weight: 400" class="multiselect-header">Timeline View ↕️</label>
-        </a>
-        <a href="profile.html" style="display: inline-block; margin-left: 10px; text-decoration: none">
-            <label style="font-weight: 400" class="multiselect-header">Profile 👤</label>
-        </a>
-        <button id="logoutButton" class="logoutButton" style="margin-left: 10px">
-            Logout
-        </button>
+        <div>
+            <a href="CommandBoard.html" style="display: inline-block; text-decoration: none">
+                <label style="font-weight: 400" class="multiselect-header">Calendar View 📅</label>
+            </a>
+             <a href="PromoTimeline.html" style="
+            display: inline-block;
+            margin-left: 10px;
+            text-decoration: none;
+          ">
+                <label style="font-weight: 400" class="multiselect-header">Timeline View ↕️</label>
+            </a>
+            <a href="profile.html" style="display: inline-block;margin-left: 10px; text-decoration: none;">
+                <label style="font-weight:400;" class="multiselect-header">Profile 👤</label>
+            </a>
+            <button id="logoutButton" class="logoutButton" style="margin-left: 10px">
+                Logout
+            </button>
+        </div>
     </div>
 
     <div class="slide">
