--- a/promo-timeline-app/src/3PP.html
+++ b/promo-timeline-app/src/3PP.html
@@ -214,8 +214,146 @@
                 </tr>
             </tbody>
         </table>
+    
+        <h1 style="margin-top: 30px; color: rgb(204, 24, 24);">3PP CarryOver DTC</h1>
+        <table class="threePP-table ">
+            <thead class="threePP-table-header">
+                <tr>
+                    <th>3PP</th>
+                    <th>JAN</th>
+                    <th>FEB</th>
+                    <th>MAR</th>
+                    <th>APR</th>
+                    <th>MAY</th>
+                    <th>JUN</th>
+                    <th>JUL</th>
+                    <th>AUG</th>
+                    <th>SEP</th>
+                    <th>OCT</th>
+                    <th>NOV</th>
+                    <th>DEC</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/Saison Dupont.png" alt=""></td>
+                    <td colspan="8" class="promo-td">
+                        <div class="promo-box" HLBudget=1154 2nets=0></div>
+                    </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/La CHOUFFE FAKE.png" alt=""></td>
+                    <td colspan="9" class="promo-td">
+                        <div class="promo-box" HLBudget=1000 2nets=0></div>
+                    </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+
+                </tr>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/Castelain%20Ch'ti%20sans%20verre.PNG" alt="">
+                    </td>
+                    <td colspan="7" class="promo-td">
+                        <div class="promo-box" HLBudget=1202 2nets=0></div>
+                    </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+
+                </tr>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/FADA%20FAKE.png" alt=""></td>
+                    <td colspan="10" class="promo-td">
+                        <div class="promo-box" HLBudget=350 2nets=0></div>
+                    </td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/Leffe 0.0 FAKE.png" alt=""></td>
+                    <td colspan="12" class="promo-td">
+                        <div class="promo-box" HLBudget=250 2nets=0></div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+
+
+
+        <h1 style="margin-top: 30px; color: rgb(204, 24, 24);">3PP Delist DTC</h1>
+        <table class="threePP-table ">
+            <thead class="threePP-table-header">
+                <tr>
+                    <th>3PP</th>
+                    <th>JAN</th>
+                    <th>FEB</th>
+                    <th>MAR</th>
+                    <th>APR</th>
+                    <th>MAY</th>
+                    <th>JUN</th>
+                    <th>JUL</th>
+                    <th>AUG</th>
+                    <th>SEP</th>
+                    <th>OCT</th>
+                    <th>NOV</th>
+                    <th>DEC</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/Keg--Anosteké-Pays-Flamand.png" alt=""></td>
+                    <td colspan="12" class="promo-td">
+                        <div class="promo-box-red" HLBudget=457 2nets=0></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/Keg--Vega.png" alt=""></td>
+                    <td colspan="12" class="promo-td">
+                        <div class="promo-box-red" HLBudget=70 2nets=0></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/st-feuillien-pi.jpg" alt=""></td>
+                    <td colspan="12" class="promo-td">
+                        <div class="promo-box-orange" HLBudget=900 2nets=0></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/Keg--Leffe-Ambrée-Amber.png" alt=""></td>
+                    <td colspan="12" class="promo-td">
+                        <div class="promo-box-orange" HLBudget=50 2nets=0></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/Keg--Leffe-Bruin-Brune.png" alt=""></td>
+                    <td colspan="12" class="promo-td">
+                        <div class="promo-box-orange" HLBudget=286 2nets=0></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td><img class="threepplogo" src="img/kegs%20front/Keg--Vocation-Life-and-Death.png" alt=""></td>
+                    <td colspan="12" class="promo-td">
+                        <div class="promo-box-orange" HLBudget=1016 2nets=0></div>
+                    </td>
+                </tr>
+
+
+            </tbody>
+        </table>
+
     </div>
 
+    
+
+    </div>
     <script type="module" src="scripts/app.js"></script>
 
     <script>
