--- a/promo-timeline-app/src/PromoTimeline.html
+++ b/promo-timeline-app/src/PromoTimeline.html
@@ -1,160 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <title>- PerfectDraft Promotions Timeline</title>
     <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="icon"
-      href="img/favicon%20small.ico"
-      type="image/png"
-      style="max-width: fit-content"
-    />
-  </head>
+    <link rel="icon" href="img/favicon%20small.ico" type="image/png" style="max-width: fit-content" />
+    <!-- Add these for Slim-Select -->
+</head>
 
-  <body>
+<body>
     <div class="header">
-      <div class="logo">
-        <a href="CommandBoard.html" class="href">
-          <img src="img/PerfectDraft-Logo_300dpi.png" alt="PerfectDraft Logo" />
-        </a>
-      </div>
-      <div class="filter-block">
-        <div class="filter-container">
-          <label for="statusFilter" style="font-weight: 600"
-            >Filter by Status:</label
-          >
-          <div class="multiselect-container">
-            <div class="multiselect-header" data-filter-type="status">
-              <span id="selectedStatusText">Public</span>
-              <span class="dropdown-arrow" id="statusDropdownArrow">▼</span>
-            </div>
-            <div class="multiselect-dropdown" id="statusDropdown">
-              <div class="multiselect-option">
-                <input
-                  type="checkbox"
-                  id="status_public"
-                  value="public"
-                  checked
-                />
-                <label for="status_public">Public</label>
-              </div>
-              <div class="multiselect-option">
-                <input type="checkbox" id="status_private" value="private" />
-                <label for="status_private">Private</label>
-              </div>
-              <div class="multiselect-option">
-                <input type="checkbox" id="status_draft" value="draft" />
-                <label for="status_draft">Draft</label>
-              </div>
-              <div class="multiselect-option">
-                <input type="checkbox" id="status_all" value="all" />
-                <label for="status_all">All Statuses</label>
-              </div>
-            </div>
-          </div>
+        <div class="logo">
+            <a href="CommandBoard.html" class="href">
+                <img src="img/PerfectDraft-Logo_300dpi.png" alt="PerfectDraft Logo" />
+            </a>
         </div>
         <div class="filter-container">
-          <label for="yearFilter" style="font-weight: 600"
-            >Filter by Year:</label
-          >
-          <div class="multiselect-container">
-            <div class="multiselect-header" data-filter-type="year">
-              <span id="selectedYearText">All Years</span>
-              <span class="dropdown-arrow" id="yearDropdownArrow">▼</span>
-            </div>
-            <div class="multiselect-dropdown" id="yearDropdown">
-              <div class="multiselect-option">
-                <input type="checkbox" id="year_all" value="all" />
-                <label for="year_all">All</label>
-              </div>
-              <div class="multiselect-option">
-                <input type="checkbox" id="year_2025" value="2025" />
-                <label for="year_2025">2025</label>
-              </div>
-              <div class="multiselect-option">
-                <input type="checkbox" id="year_2026" value="2026" />
-                <label for="year_2026">2026</label>
-              </div>
-            </div>
-          </div>
+            <button id="openFilterModalBtn" class="multiselect-header">Advanced Filters ⚙️</button>
         </div>
-        <div class="filter-container">
-          <label for="channelFilter" style="font-weight: 600"
-            >Filter by Channel:</label
-          >
-          <div class="multiselect-container">
-            <div class="multiselect-header" data-filter-type="channel">
-              <span id="selectedText">All Channels</span>
-              <span class="dropdown-arrow" id="dropdownArrow">▼</span>
-            </div>
-            <div class="multiselect-dropdown" id="channelDropdown">
-              <div class="multiselect-option">
-                <input type="checkbox" id="all" value="all" />
-                <label for="all">All</label>
-              </div>
-              <div class="multiselect-option">
-                <input
-                  type="checkbox"
-                  id="cavistes_ind"
-                  value="Cavistes Indépendants"
-                />
-                <label for="cavistes_ind">Cavistes Indépendants</label>
-              </div>
-              <div class="multiselect-option">
-                <input type="checkbox" id="chr" value="CHR" />
-                <label for="chr">CHR</label>
-              </div>
-              <div class="multiselect-option">
-                <input
-                  type="checkbox"
-                  id="cavistes_nat"
-                  value="Cavistes Nationaux"
-                />
-                <label for="cavistes_nat">Cavistes Nationaux</label>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div>
-        <a
-          href="CommandBoard.html"
-          style="display: inline-block; text-decoration: none"
-        >
-          <label style="font-weight: 400" class="multiselect-header"
-            >Calendar View 📅</label
-          >
-        </a>
-        <a
-          href="3PP.html"
-          style="
-            display: inline-block;
-            margin-left: 10px;
-            text-decoration: none;
-          "
-        >
-          <label
-            style="font-weight: 400; text-decoration: none"
-            class="multiselect-header"
-            >3PP View 🍺</label
-          >
-        </a>
-        <a href="profile.html" style="display: inline-block;margin-left: 10px; text-decoration: none;">
+        <div>
+            <a href="CommandBoard.html" style="display: inline-block; text-decoration: none">
+                <label style="font-weight: 400" class="multiselect-header">Calendar View 📅</label>
+            </a>
+            <a href="3PP.html" style="
+                display: inline-block;
+                margin-left: 10px;
+                text-decoration: none;
+            ">
+                <label style="font-weight: 400; text-decoration: none" class="multiselect-header">3PP View 🍺</label>
+            </a>
+            <a href="profile.html" style="display: inline-block;margin-left: 10px; text-decoration: none;">
                 <label style="font-weight:400;" class="multiselect-header">Profile 👤</label>
             </a>
-        <button
-          id="logoutButton"
-          class="logoutButton"
-          style="margin-left: 10px"
-        >
-          Logout
-        </button>
-      </div>
+            <button id="logoutButton" class="logoutButton" style="margin-left: 10px">
+                Logout
+            </button>
+        </div>
     </div>
     <div class="slide">
-      <div id="timeline-root"></div>
+        <div id="timeline-root"></div>
     </div>
     <script type="module" src="scripts/app.js"></script>
-  </body>
+    <script type="module" src="scripts/shared/filterModal.js"></script>
+</body>
+
 </html>
