--- a/promo-timeline-app/src/promo-detail.html
+++ b/promo-timeline-app/src/promo-detail.html
@@ -18,7 +18,6 @@
                 <img src="img/PerfectDraft-Logo_300dpi.png" alt="PerfectDraft Logo">
             </a>
         </div>
-        <div class="filter-block"></div>
         <div>
             <a href="CommandBoard.html" style="display: inline-block; text-decoration: none">
                 <label style="font-weight: 400" class="multiselect-header">Calendar View 📅</label>
@@ -155,10 +154,6 @@
                                 </div>
                             </div>
 
-                            <div class="input-group">
-                                <label for="link">Link</label>
-                                <input type="url" id="link" name="link">
-                            </div>
 
                             <input type="hidden" id="tableName" name="tableName">
 
@@ -169,9 +164,38 @@
                             </div>
 
                             <div class="input-group">
+                                <label for="borderTextColor">Text Border Color</label>
+                                <input type="text" id="borderTextColor" name="borderTextColor"
+                                    placeholder="#RRGGBB or color name">
+                            </div>
+
+                            <div class="input-group">
                                 <label for="bgColor">Background Colors (comma-separated)</label>
                                 <input type="text" id="bgColor" name="bgColor" placeholder="e.g., #FFCC02,#FFA726">
                             </div>
+
+                            <div class="input-group">
+                                <label for="TitleTextColor">Title Text Colors</label>
+                                <input type="text" id="TitleTextColor" name="TitleTextColor"
+                                    placeholder="#RRGGBB or color name">
+                            </div>
+
+                            <div class="input-group">
+                                <label for="dateTextColor">Date Text Colors</label>
+                                <input type="text" id="dateTextColor" name="dateTextColor"
+                                    placeholder="#RRGGBB or color name">
+                            </div>
+
+                            <div class="input-group">
+                                <label for="detailsTextColor">Details Text Colors</label>
+                                <input type="text" id="detailsTextColor" name="detailsTextColor"
+                                    placeholder="#RRGGBB or color name">
+                            </div>
+                            <div class="input-group">
+                                <label for="link">Link</label>
+                                <input type="url" id="link" name="link">
+                            </div>
+
                         </div>
                     </div>
 
@@ -311,7 +335,9 @@
                             <template x-for="(row, rowIndex) in editor.rows" :key="rowIndex">
                                 <tr>
                                     <template x-for="(cell, colIndex) in row" :key="colIndex">
-                                        <td contenteditable="true" @blur="editor.rows[rowIndex][colIndex] = $event.target.innerHTML" x-html="cell"></td>
+                                        <td contenteditable="true"
+                                            @blur="editor.rows[rowIndex][colIndex] = $event.target.innerHTML"
+                                            x-html="cell"></td>
 
                                     </template>
                                 </tr>
