profile and team view

--- a/promo-timeline-app/src/profile.html
+++ b/promo-timeline-app/src/profile.html
@@ -37,11 +37,13 @@
             border-radius: 4px;
             font-size: 7px;
         }
-        .create-button:hover{
+
+        .create-button:hover {
             background-color: #27ae60;
         }
-        .create-button{
-            background-color: #31d14c; 
+
+        .create-button {
+            background-color: #31d14c;
             text-decoration: none;
         }
     </style>
@@ -101,11 +103,11 @@
                     </div>
                     <div class="input-group">
                         <label for="displayTeam">Display Team</label>
-                        <input type="text" id="displayTeam" name="displayTeam" disabled/>
+                        <input type="text" id="displayTeam" name="displayTeam" disabled />
                     </div>
                     <div class="input-group">
                         <label for="displayRole">Display Role</label>
-                        <input type="text" id="displayRole" name="displayRole" disabled/>
+                        <input type="text" id="displayRole" name="displayRole" disabled />
                     </div>
                     <div class="input-group">
                         <label for="profileEmail">Email</label>
@@ -119,10 +121,13 @@
                         <label for="profileChannel">Channel</label>
                         <input type="text" id="profileChannel" name="profileChannel" disabled />
                     </div>
-                    <button type="submit" id="saveProfileButton" class="updateButton" style="width:80%;">Save Changes</button>
-                    <button id="saveProfileButton" class="AccessYellowButton" style="width:80%;">Manage my team</button>
-                    <button id="" class="upload-button" style="width:80%;"></button>
+                    <button type="submit" id="saveProfileButton" class="updateButton" style="width:80%;">Save
+                        Changes</button>
                 </form>
+                <a href="team.html">
+                    <button class="AccessYellowButton" style="width:80%;">Manage my team</button>
+                </a>
+                <button id="" class="upload-button" style="width:80%;"></button>
                 <p id="profileMessage" class="auth-message"></p>
             </div>
         </div>
@@ -131,10 +136,10 @@
             <div class="profile-box">
                 <div class="header-promo">
                     <h1 style="">My Promotions</h1>
-                    <div style="display:flex;flex-direction: row;/* justify-content: space-around; */align-items: center;min-width:fit-content;">
-                        <button class="multiselect-header filter-icon">Find in table   <span> 🔍</span></button>
-                        <a href="create-promo.html" class="create-button"
-                            >➕ New Promo
+                    <div
+                        style="display:flex;flex-direction: row;/* justify-content: space-around; */align-items: center;min-width:fit-content;">
+                        <button class="multiselect-header filter-icon">Find in table <span> 🔍</span></button>
+                        <a href="create-promo.html" class="create-button">➕ New Promo
                         </a>
                     </div>
                 </div>
